fixtures/parser/valid/07-text-slot-reference.fl
component CopyBlock(
  prop label-text: text
) {
  surface {
    text as heading {
      content: @label-text
      slot suffix: text {
        required
        fallback {
          text {
            content: "!"
          }
        }
      }
    }
  }
}
