fixtures/parser/invalid/06-unterminated-params.fl
component Broken(
  prop label-text: text
{
  surface {}
}
